[gd_scene load_steps=6 format=3 uid="uid://b1gqnrry03vd1"]

[ext_resource type="Script" path="res://Interface/Pause/pauseOptions.gd" id="1_p54p3"]
[ext_resource type="FontFile" uid="uid://b572bvrcrok26" path="res://Fontes/Press_Start_2P/PressStart2P-Regular.ttf" id="2_qurxi"]
[ext_resource type="Script" path="res://Interface/Menu/button_shadow.gd" id="3_m0x50"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rqsdc"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_xcebv"]
color = Color(1, 1, 1, 1)
thickness = 10
vertical = true

[node name="PauseOptions" type="Control" node_paths=PackedStringArray("init_button")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p54p3")
init_button = NodePath("ConfigPanel/OptionsContainer/Continue")
metadata/_edit_pinned_properties_ = [&"init_button"]

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.862745)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -306.5
offset_top = -361.0
offset_right = 321.5
offset_bottom = -229.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(0.923959, 1.51612e-06, 1.15514e-06, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 11
theme_override_fonts/font = ExtResource("2_qurxi")
theme_override_font_sizes/font_size = 124
text = "Pause"
horizontal_alignment = 1

[node name="ConfigPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -56.0
offset_right = 415.0
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rqsdc")

[node name="OptionsContainer" type="VBoxContainer" parent="ConfigPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Continue" type="Button" parent="ConfigPanel/OptionsContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ExitGame")
focus_neighbor_bottom = NodePath("../Config")
focus_next = NodePath("../Config")
focus_previous = NodePath("../ExitGame")
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(0.923959, 1.51612e-06, 1.15514e-06, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_qurxi")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxLine_xcebv")
text = "Continuar"

[node name="shadow" type="Label" parent="ConfigPanel/OptionsContainer/Continue"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -228.0
offset_top = -36.0
offset_right = 228.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_fonts/font = ExtResource("2_qurxi")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
script = ExtResource("3_m0x50")

[node name="Config" type="Button" parent="ConfigPanel/OptionsContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Continue")
focus_neighbor_bottom = NodePath("../ExitMenu")
focus_next = NodePath("../ExitMenu")
focus_previous = NodePath("../Continue")
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(0.923959, 1.51612e-06, 1.15514e-06, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_qurxi")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxLine_xcebv")
text = "Configurações"
flat = true

[node name="shadow" type="Label" parent="ConfigPanel/OptionsContainer/Config"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -228.0
offset_top = -36.0
offset_right = 228.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_fonts/font = ExtResource("2_qurxi")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
script = ExtResource("3_m0x50")

[node name="ExitMenu" type="Button" parent="ConfigPanel/OptionsContainer"]
process_mode = 3
layout_mode = 2
focus_neighbor_top = NodePath("../Config")
focus_neighbor_bottom = NodePath("../ExitGame")
focus_next = NodePath("../ExitGame")
focus_previous = NodePath("../Config")
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(0.923959, 1.51612e-06, 1.15514e-06, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_qurxi")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxLine_xcebv")
text = "Menu"
flat = true

[node name="shadow" type="Label" parent="ConfigPanel/OptionsContainer/ExitMenu"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -228.0
offset_top = -36.0
offset_right = 228.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_fonts/font = ExtResource("2_qurxi")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
script = ExtResource("3_m0x50")

[node name="HSeparator" type="HSeparator" parent="ConfigPanel/OptionsContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 72)
layout_mode = 2

[node name="ExitGame" type="Button" parent="ConfigPanel/OptionsContainer"]
process_mode = 3
layout_mode = 2
focus_neighbor_top = NodePath("../ExitMenu")
focus_neighbor_bottom = NodePath("../Continue")
focus_next = NodePath("../Continue")
focus_previous = NodePath("../ExitMenu")
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(0.923959, 1.51612e-06, 1.15514e-06, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_qurxi")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxLine_xcebv")
text = "Fechar
Jogo"
flat = true

[node name="shadow" type="Label" parent="ConfigPanel/OptionsContainer/ExitGame"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -228.0
offset_top = -36.0
offset_right = 228.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_fonts/font = ExtResource("2_qurxi")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
script = ExtResource("3_m0x50")

[connection signal="pressed" from="ConfigPanel/OptionsContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="ConfigPanel/OptionsContainer/Config" to="." method="_on_config_pressed"]
[connection signal="pressed" from="ConfigPanel/OptionsContainer/ExitMenu" to="." method="_on_exit_menu_pressed"]
[connection signal="pressed" from="ConfigPanel/OptionsContainer/ExitGame" to="." method="_on_exit_game_pressed"]
